# cti-primer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.ja.md  README.md  config.example.toml  pyproject.toml
docs/en/: architecture.md  cti-primer-rfp.md
docs/ja/: architecture.ja.md  cti-primer-rfp.ja.md
src/cti_primer/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/cti_primer/analysis/: asset_mapper.py  element_extractor.py  pir_clusterer.py  risk_scorer.py  threat_mapper.py
src/cti_primer/generator/: assets_generator.py  pir_builder.py  report_builder.py
src/cti_primer/ingest/: context_parser.py  report_reader.py  stix_extractor.py
src/cti_primer/llm/: client.py
src/cti_primer/llm/prompts/: __init__.py  asset_mapping.md  context_structuring.md  element_extraction.md  pir_generation.md  risk_scoring.md  stix_extraction.md  threat_tag_completion.md
src/cti_primer/review/: github.py
src/cti_primer/sage/: client.py
src/cti_primer/web/: app.py
src/cti_primer/web/templates/: index.html  review.html
tests/: test_analysis.py  test_config.py  test_context_parser.py  test_generators.py  test_integrations.py  test_llm_client.py  test_models.py  test_pipeline.py  test_stix.py  test_web_app.py
tests/fixtures/: sample_context.json  sample_context.md  sample_report.md
