[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cti-primer"
version = "0.1.0"
description = "Local-first CTI PIR generation tool with LLM-powered analysis"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "click>=8.1,<9.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.12",
    "stix2>=3.0,<4.0",
    "pypdf>=5.0,<6.0",
    "beautifulsoup4>=4.12,<5.0",
    "structlog>=24.4,<26.0",
    "nlk @ git+https://github.com/nlink-jp/nlk-py.git",
]

[project.scripts]
cti-primer = "cti_primer.cli:main"

[project.urls]
Repository = "https://github.com/nlink-jp/cti-primer"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
    "respx>=0.22",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cti_primer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
pythonPlatform = "All"
